--- a/MoppApp/MoppApp/Crypto.storyboard
+++ b/MoppApp/MoppApp/Crypto.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qw4-LB-K7D">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qw4-LB-K7D">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,42 +24,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TYv-AQ-7tk">
-                                <rect key="frame" x="16" y="330.5" width="343" height="50"/>
-                                <color key="backgroundColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uDB-FM-1cx">
+                                <rect key="frame" x="16" y="290" width="343" height="87.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose file to crypt to decrypt" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="248-ll-0AR">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="TYv-AQ-7tk">
+                                        <rect key="frame" x="0.0" y="39.5" width="343" height="48"/>
+                                        <color key="backgroundColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="Du1-Ls-jbq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="17"/>
+                                        <state key="normal" title="CHOOSE FILE">
+                                            <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="importFilesAction" destination="J3s-km-sWX" eventType="touchUpInside" id="ftB-Oq-ago"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="43A-TK-RQA"/>
+                                    <constraint firstItem="248-ll-0AR" firstAttribute="leading" secondItem="uDB-FM-1cx" secondAttribute="leading" id="3iM-EW-3ho"/>
+                                    <constraint firstItem="248-ll-0AR" firstAttribute="top" secondItem="uDB-FM-1cx" secondAttribute="top" id="FoL-iJ-jlq"/>
+                                    <constraint firstAttribute="trailing" secondItem="248-ll-0AR" secondAttribute="trailing" id="fZj-5p-BLw"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="17"/>
-                                <state key="normal" title="CHOOSE FILE">
-                                    <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="importFilesAction" destination="J3s-km-sWX" eventType="touchUpInside" id="ftB-Oq-ago"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose file to crypt to decrypt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="248-ll-0AR">
-                                <rect key="frame" x="16" y="291" width="343" height="23.5"/>
-                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="V6M-eL-nsZ"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="248-ll-0AR" firstAttribute="leading" secondItem="V6M-eL-nsZ" secondAttribute="leading" constant="16" id="7Ox-KV-N2t"/>
-                            <constraint firstItem="V6M-eL-nsZ" firstAttribute="trailing" secondItem="TYv-AQ-7tk" secondAttribute="trailing" constant="16" id="CnC-Gv-AVf"/>
-                            <constraint firstItem="V6M-eL-nsZ" firstAttribute="trailing" secondItem="248-ll-0AR" secondAttribute="trailing" constant="16" id="epx-i6-gKs"/>
-                            <constraint firstItem="TYv-AQ-7tk" firstAttribute="centerY" secondItem="V6M-eL-nsZ" secondAttribute="centerY" id="lhg-d5-JjL"/>
-                            <constraint firstItem="TYv-AQ-7tk" firstAttribute="top" secondItem="248-ll-0AR" secondAttribute="bottom" constant="16" id="oKV-js-haN"/>
-                            <constraint firstItem="TYv-AQ-7tk" firstAttribute="leading" secondItem="V6M-eL-nsZ" secondAttribute="leading" constant="16" id="yyW-U2-TKt"/>
+                            <constraint firstItem="uDB-FM-1cx" firstAttribute="centerY" secondItem="WzN-Kf-XwL" secondAttribute="centerY" id="6gi-0d-WCn"/>
+                            <constraint firstItem="uDB-FM-1cx" firstAttribute="leading" secondItem="V6M-eL-nsZ" secondAttribute="leading" constant="16" id="763-Iq-ctT"/>
+                            <constraint firstItem="uDB-FM-1cx" firstAttribute="centerX" secondItem="WzN-Kf-XwL" secondAttribute="centerX" id="UPH-UG-Hpe"/>
+                            <constraint firstItem="V6M-eL-nsZ" firstAttribute="trailing" secondItem="uDB-FM-1cx" secondAttribute="trailing" constant="16" id="y0r-6g-fMJ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="V6M-eL-nsZ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Crypto" id="EbM-OP-n9X">
                         <barButtonItem key="rightBarButtonItem" image="VerticalDotsMenu" style="plain" id="tpl-LF-OAz">
