--- a/MoppApp/MoppApp/RecentContainersElements.xib
+++ b/MoppApp/MoppApp/RecentContainersElements.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +25,6 @@
                 <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-OL-BjW" customClass="SearchTextField" customModule="MoppApp" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
@@ -49,6 +46,7 @@
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="zkY-Ou-pn7"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" id="6bp-G2-OoW"/>
@@ -61,7 +59,6 @@
                 <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="YC1-OL-BjW" secondAttribute="bottom" id="xBU-Ws-iAR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="zkY-Ou-pn7"/>
             <connections>
                 <outlet property="searchButton" destination="9Fx-J3-DpC" id="g3I-VC-uW7"/>
                 <outlet property="searchTextField" destination="YC1-OL-BjW" id="JaC-Lq-RgF"/>
